--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Mielon's Projects</title>
-        <link rel="icon" href="https://winterforest.mielon.eu/assets/favicon.png" type="image/x-icon">
+        <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     </head>
     <body>
         <p1>UwU</p1>
     </body>
 </html>
+
