--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Mielon's Projects</title>
-        <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+        <link rel="icon" href="https://winterforest.mielon.eu/assets/favicon.png" type="image/x-icon">
     </head>
     <body>
-        <p1>UwU</p1>
+        <p1>🗿 UwU 🗿</p1>
+        <br> <br>
+        <img src="https://tenor.com/pl/view/blush-anime-shy-cute-girl-gif-14495627569314612221.gif" alt="Anime girl blushing">
     </body>
 </html>
-
