--- a/super_secret.html
+++ b/super_secret.html
@@ -96,7 +96,7 @@
             <img src="https://tenor.com/view/rickroll-roll-rick-never-gonna-give-you-up-never-gonna-gif-22954713.gif">
         </div>
         <br>
-        <a class="text" url="mielon.eu">go back</a>
+        <a class="text" href="https://mielon.eu">go back</a>
         <br><br>
         <footer class="footer">
             <div class="footer-content">
@@ -108,4 +108,5 @@
     </body>
 
 </html>
+
 
