--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <meta charset="UTF-8">
         <title>Mielon's Projects</title>
         <link rel="icon" href="https://winterforest.mielon.eu/assets/favicon.png" type="image/x-icon">
+
+        <meta property="og:title" content="Mielon's Projects">
+        <meta property="og:description" content="👀👀👀">
+        <meta property="og:url" content="https://mielon.eu">
+        <meta property="og:type" content="website">
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Mielon's Projects">
+        <meta name="twitter:description" content="👀👀👀">
     </head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <style>
