--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         img {
-            width: 25vw;
+            width: 20vw;
             height: auto;
             border-radius: 2.5vw;
             box-shadow: 
@@ -111,12 +111,12 @@
     </style>
     <body>
         <div class="background"></div>
-        <p>🗿 UwU 🗿</p>
+        <p>something will be here someday</p>
         <br>
+        <p>🗿 UwU 🗿</p>
         <div class="img_container">
             <img src="https://tenor.com/pl/view/blush-anime-shy-cute-girl-gif-14495627569314612221.gif">
         </div>
-        <br>
         <p>😳 DEHORA SAY UWU 😳</p>
         <br><br>
         <footer class="footer">
