--- a/home.html
+++ b/home.html
@@ -1,65 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mielon's Projects</title>
-        <link rel="icon" href="assets/favicon.png">
-        <link rel="stylesheet" href="home/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="navbar">
-            <div class="navbar_content">
-                <a href="https://mielon.eu" target="_blank" rel="noopener">Home</a>
-                <a href="https://mielon.eu/projects" target="_blank" rel="noopener">Projects</a>
-                <a href="https://mielon.eu/about" target="_blank" rel="noopener">About</a>
-                <a href="https://mielon.eu/contact" target="_blank" rel="noopener">Contact</a>
-            </div>
-            <div class="navbar_copyright">
-                <p>&copy; Mielon 2025</p>
-            </div>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mielon's Projects</title>
+  <meta name="keywords" content="Roblox GUI, Roblox interface, Roblox Projects, Roblox Dev, UI design, Roblox portfolio, Mielon GUI">
+  <meta name="author" content="Mielon">
+  <link rel="icon" href="assets/favicon.png">
+  <link rel="stylesheet" href="home/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar">
+  <div class="navbar_content">
+    <a href="https://mielon.eu" rel="noopener">Home</a>
+    <a href="https://mielon.eu/projects" rel="noopener">Projects</a>
+    <a href="https://mielon.eu/about" rel="noopener">About</a>
+    <a href="https://mielon.eu/contact" rel="noopener">Contact</a>
+  </div>
 
-        <div class="title_space"></div>
-        <div class="intro">
-            <img src="assets/mielon.png" alt="Mielon">
-            <div class="intro_text">
-                <p>Hi,</p>
-                <h1>I'm Mielon</h1>
-            </div>
-        </div>
-        
-        <section class="projects">
-            <h2>My Portfolio</h2>
-            <div class="projects_grid">
-                <div class="project_card">
-                    <video autoplay loop muted playsinline>
-                    <source src="assets/neon_gui.webm" type="video/webm" />
-                    You're browser does not support .webm format.
-                    </video>
-                    <h3>Neon GUI</h3>
-                    <p>Fully animated neon backgrounds, buttons and frames.</p>
-                </div>
-                <div class="project_card">
-                    <video autoplay loop muted playsinline>
-                    <source src="assets/ria_gui.webm" type="video/webm" />
-                    You're browser does not support .webm format.
-                    </video>
-                    <h3>RIA GUI</h3>
-                    <p>Changing background gradients and expanding button strokes. Inspired by the RIA2025 Hub.</p>
-                </div>
-                <div class="project_card">
-                    <video autoplay loop muted playsinline>
-                    <source src="assets/neon_gui.webm" type="video/webm" />
-                    You're browser does not support .webm format.
-                    </video>
-                    <h3>Neon GUI</h3>
-                    <p>Fully animated neon backgrounds, buttons and frames.</p>
-                </div>
-            </div>
-        </section>
+  <div class="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+    <div class="navbar_copyright">
+      <a href="https://www.roblox.com/communities/32336374" target="_blank" rel="noopener"><img src="assets/roblox_logo.png" alt="Roblox"></a>
+      <a href="https://youtube.com/@MielonDev" target="_blank" rel="noopener"><img src="assets/yt_logo.png" alt="YouTube"></a>
+      <a href="https://x.com/MielonDev" target="_blank" rel="noopener"><img src="assets/x_logo.png" alt="Twitter/X"></a>
+      <p>&copy; Mielon 2025</p>
+    </div>
+  </nav>
 
-        <script src="home/script.js"></script>
-    </body>
+  <div class="title_space"></div>
+
+  <header class="intro">
+    <img src="assets/mielon.png" alt="Mielon - Roblox UI Designer">
+    <div class="intro_text">
+      <p>Hi,</p>
+      <h1>I'm Mielon</h1>
+      <p class="tagline">Here you can find my projects or order a Roblox GUI.</p>
+    </div>
+  </header>
+
+  <section class="whyme">
+    <h2>Why Me?</h2>
+    <div class="whyme_grid">
+      <div>
+        <h3>Your Decisions</h3>
+        <p><strong>You</strong> decide how your GUI should look like. I realize <strong>your</strong> Ideas.</p>
+      </div>
+      <div>
+        <h3>Low Price</h3>
+        <p>Just <strong>$5</strong> per interface. I want to get experience, not your money.</p>
+      </div>
+      <div>
+        <h3>Fast Delivery</h3>
+        <p>Most projects are ready within <strong>1–3 days</strong>.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="projects">
+    <h2>My Portfolio</h2>
+    <p class="projects_desc">Click on cards to test GUIs directly in Roblox</p>
+    <div class="projects_grid">
+      <div class="project_card" data-link="https://www.roblox.com/games/136480140093002">
+        <iframe 
+            src="https://player.vimeo.com/video/1112727151?background=1&autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen">
+        </iframe>
+        <h3>Neon GUI</h3>
+        <p>Fully animated neon backgrounds, buttons and frames.</p>
+      </div>
+      <div class="project_card" data-link="https://www.roblox.com/games/110271996672113">
+        <iframe 
+            src="https://player.vimeo.com/video/1112727156?background=1&autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen">
+        </iframe>
+        <h3>RIA GUI</h3>
+        <p>Changing gradients and animated button strokes. Inspired by the RIA2025 Hub.</p>
+      </div>
+      <div class="project_card" data-link="https://www.roblox.com/games/138247360527185">
+        <iframe 
+            src="https://player.vimeo.com/video/1112727165?background=1&autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen">
+        </iframe>
+        <h3>Winter Forest GUI</h3>
+        <p>Main menu GUI for a story game. Clean and subtle.</p>
+      </div>
+      <div class="project_card" data-link="https://www.roblox.com/games/138247360527185">
+        <iframe 
+            src="https://player.vimeo.com/video/1112727135?background=1&autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen">
+        </iframe>
+        <h3>Jailbreak Concept GUI</h3>
+        <p>My concept GUI for Jailbreak. Not affiliated with Badimo.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="cta">
+    <h2>Get Your Own GUI</h2>
+    <p>Order a fully customized Roblox interface starting from <strong>$5</strong>.</p>
+    <a href="https://mielon.eu/contact" class="cta_button">Contact Me</a>
+    <br> <p> </p>
+  </section>
+
+  <div class="modal" id="projectModal" role="dialog" aria-modal="true">
+    <div class="modal_content">
+     <span class="modal_close">&times;</span>
+      <iframe id="modalIframe" frameborder="0" allow="autoplay; fullscreen"></iframe>
+      <h3 id="modalTitle"></h3>
+      <p id="modalDesc"></p>
+      <a id="modalBtn" href="#" target="_blank" class="modal_button">
+        <img src="assets/play_arrow.png" class="modal_play_image" alt="Play">
+      </a>
+      <p class="modal_test_text">Test on Roblox</p>
+    </div>
+  </div>
+
+  <script src="home/script.js"></script>
+</body>
 </html>
