--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
   <div class="title_space"></div>
 
   <header class="intro">
-    <img src="assets/mielon.png" alt="Mielon - Roblox UI Designer">
+    <img src="assets/mielon.png" alt="Mielon">
     <div class="intro_text">
       <p>Hi,</p>
       <h1>I'm Mielon</h1>
@@ -119,3 +119,4 @@
   <script src="home/script.js"></script>
 </body>
 </html>
+
