--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Roblox GUI, Roblox interface, Roblox Projects, Roblox Dev, UI design, Roblox portfolio, Mielon GUI">
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="home/style.css">
+  <link rel="stylesheet" href="home/style.css?v=1">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +19,7 @@
     <a href="https://mielon.eu/contact" rel="noopener">Contact</a>
   </div>
 
+  <!-- HAMBURGER -->
   <div class="hamburger">
     <span></span>
     <span></span>
@@ -35,7 +36,7 @@
   <div class="title_space"></div>
 
   <header class="intro">
-    <img src="assets/mielon.png" alt="Mielon">
+    <img src="assets/mielon.png" alt="Mielon - Roblox UI Designer">
     <div class="intro_text">
       <p>Hi,</p>
       <h1>I'm Mielon</h1>
@@ -116,7 +117,6 @@
     </div>
   </div>
 
-  <script src="home/script.js"></script>
+  <script src="home/script.js?v=1"></script>
 </body>
 </html>
-
