--- a/home.html
+++ b/home.html
@@ -19,16 +19,15 @@
     <a href="https://mielon.eu/contact" rel="noopener">Contact</a>
   </div>
 
-  <!-- HAMBURGER -->
   <div class="hamburger">
     <span></span>
     <span></span>
     <span></span>
   </div>
     <div class="navbar_copyright">
-      <a href="https://www.roblox.com/communities/32336374" target="_blank" rel="noopener"><img src="assets/roblox_logo.png" alt="Roblox"></a>
-      <a href="https://youtube.com/@MielonDev" target="_blank" rel="noopener"><img src="assets/yt_logo.png" alt="YouTube"></a>
-      <a href="https://x.com/MielonDev" target="_blank" rel="noopener"><img src="assets/x_logo.png" alt="Twitter/X"></a>
+      <a href="https://www.roblox.com/communities/32336374" target="_blank" rel="noopener"><img src="https://i.ibb.co/Myj9xb12/roblox-logo.png" alt="Roblox"></a>
+      <a href="https://youtube.com/@MielonDev" target="_blank" rel="noopener"><img src="https://i.ibb.co/gFQQMLLH/yt-logo.png" alt="YouTube"></a>
+      <a href="https://x.com/MielonDev" target="_blank" rel="noopener"><img src="https://i.ibb.co/Zp7sggd3/x-logo.png" alt="Twitter/X"></a>
       <p>&copy; Mielon 2025</p>
     </div>
   </nav>
@@ -36,7 +35,7 @@
   <div class="title_space"></div>
 
   <header class="intro">
-    <img src="assets/mielon.png" alt="Mielon - Roblox UI Designer">
+    <img src="https://i.ibb.co/B5L3Hxc6/mielon.png" alt="Mielon">
     <div class="intro_text">
       <p>Hi,</p>
       <h1>I'm Mielon</h1>
@@ -111,7 +110,7 @@
       <h3 id="modalTitle"></h3>
       <p id="modalDesc"></p>
       <a id="modalBtn" href="#" target="_blank" class="modal_button">
-        <img src="assets/play_arrow.png" class="modal_play_image" alt="Play">
+        <img src="https://i.ibb.co/nMMm7W4W/play-arrow.png" class="modal_play_image" alt="Play">
       </a>
       <p class="modal_test_text">Test on Roblox</p>
     </div>
