--- a/home.html
+++ b/home.html
@@ -7,32 +7,13 @@
   <meta name="keywords" content="Roblox GUI, Roblox interface, Roblox Projects, Roblox Dev, UI design, Roblox portfolio, Mielon GUI">
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="home/style.css?v=1">
+  <link rel="stylesheet" href="main/style.css?v=2">
+  <link rel="stylesheet" href="navbar/navbar.css?v=2">
+  <link rel="stylesheet" href="home/style.css?v=2">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar">
-  <div class="navbar_content">
-    <a href="https://mielon.eu" rel="noopener">Home</a>
-    <a href="https://mielon.eu/projects" rel="noopener">Projects</a>
-    <a href="https://mielon.eu/about" rel="noopener">About</a>
-    <a href="https://mielon.eu/contact" rel="noopener">Contact</a>
-  </div>
-
-  <div class="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-    <div class="navbar_copyright">
-      <a href="https://www.roblox.com/communities/32336374" target="_blank" rel="noopener"><img src="https://i.ibb.co/Myj9xb12/roblox-logo.png" alt="Roblox"></a>
-      <a href="https://youtube.com/@MielonDev" target="_blank" rel="noopener"><img src="https://i.ibb.co/gFQQMLLH/yt-logo.png" alt="YouTube"></a>
-      <a href="https://x.com/MielonDev" target="_blank" rel="noopener"><img src="https://i.ibb.co/Zp7sggd3/x-logo.png" alt="Twitter/X"></a>
-      <p>&copy; Mielon 2025</p>
-    </div>
-  </nav>
-
-  <div class="title_space"></div>
+  <div id="navbar"></div>
 
   <header class="intro">
     <img src="https://i.ibb.co/B5L3Hxc6/mielon.png" alt="Mielon">
@@ -116,6 +97,7 @@
     </div>
   </div>
 
-  <script src="home/script.js?v=1"></script>
+  <script src="home/script.js?v=2"></script>
+  <script src="navbar/navbar.js?v=2"></script>
 </body>
 </html>
