--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mielon's Projects - Contact</title>
+  <title>Mielon's Projects - 404</title>
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
   <link rel="stylesheet" href="main/style.css?v=2">
