--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar_content">
-    <a href="https://mielon.eu" rel="noopener">Home</a>
+    <a href="https://mielon.eu/home" rel="noopener">Home</a>
     <a href="https://mielon.eu/projects" rel="noopener">Projects</a>
     <a href="https://mielon.eu/about" rel="noopener">About</a>
     <a href="https://mielon.eu/contact" rel="noopener">Contact</a>
