--- a/symulatorstaniawmiejscu.html
+++ b/symulatorstaniawmiejscu.html
@@ -256,7 +256,7 @@
     </div>
 
     <audio id="bg-music" loop>
-        <source src="bubbles.mp3" type="audio/mpeg">
+        <source src="symulatorstaniawmiejscu/bubbles.mp3" type="audio/mpeg">
     </audio>
 
     <script type="importmap">
