--- a/symulatorstaniawmiejscu.html
+++ b/symulatorstaniawmiejscu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>mielon.eu - Symulator Stania w Miejscu</title>
+    <link rel="icon" href="https://winterforest.mielon.eu/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body { 
