--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mielon's Projects</title>
-  <meta name="keywords" content="Roblox GUI, Roblox interface, Roblox Projects, Roblox Dev, UI design, Roblox portfolio, Mielon GUI">
+  <meta name="keywords" content="Roblox GUI, Roblox projects, Mielon, Roblox Dev, RobloxDev">
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
   <link rel="stylesheet" href="main/style.css?v=3">
@@ -13,45 +13,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <canvas id="canvas"></canvas>
   <div id="navbar"></div>
 
   <header class="intro">
     <img src="https://i.ibb.co/B5L3Hxc6/mielon.png" alt="Mielon">
     <div class="intro_text">
       <p>Hi,</p>
-      <h1>I'm Mielon</h1>
-      <p class="tagline">Here you can find my projects or order a Roblox GUI.</p>
+      <h1>I'm Mielon!</h1>
+      <p class="tagline">Here you can find most of my projects.</p>
     </div>
   </header>
-
-  <section class="whyme">
-    <h2>Why Me?</h2>
-    <div class="whyme_grid">
-      <div>
-        <h3>Your Decisions</h3>
-        <p><strong>You</strong> decide how your GUI should look like. I realize <strong>your</strong> Ideas.</p>
-      </div>
-      <div>
-        <h3>Low Price</h3>
-        <p>Just <strong>$5</strong> per interface. I want to get experience, not your money.</p>
-      </div>
-      <div>
-        <h3>Fast Delivery</h3>
-        <p>Most projects are ready within <strong>1–3 days</strong>.</p>
-      </div>
-    </div>
-  </section>
-
   <section class="projects">
-    <h2>My Portfolio</h2>
-    <p class="projects_desc">Click on cards to test GUIs directly in Roblox</p>
+    <h2>My Projects</h2>
+    <p class="projects_desc">Click on cards to learn more.</p>
     <div class="projects_grid">
-      <div class="project_card" data-link="https://www.roblox.com/games/136480140093002">
-        <iframe 
-            src="https://player.vimeo.com/video/1112727151?background=1&autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen">
-        </iframe>
-        <h3>Neon GUI</h3>
-        <p>Fully animated neon backgrounds, buttons and frames.</p>
+      <div class="project_card" data-link="https://www.roblox.com/games/136480140093002"> 
+            <img src="assets/fnal_arcade_thumbnail.png">
+        <h3>FNaL Arcade</h3>
+        <p>A Roblox game featuring many 2D arcade minigames set in the Five Nights at Lelon's universe.</p>
       </div>
       <div class="project_card" data-link="https://www.roblox.com/games/110271996672113">
         <iframe 
@@ -99,6 +79,6 @@
 
   <script src="home/script.js?v=3"></script>
   <script src="navbar/navbar.js?v=3"></script>
+  <script src="main/script.js?=v3"></script>
 </body>
 </html>
-
