--- a/404.html
+++ b/404.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mielon's Projects - 404</title>
+  <title>Mielon's Projects - Contact</title>
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="main/style.css?v=3">
-  <link rel="stylesheet" href="navbar/navbar.css?v=3">
-  <link rel="stylesheet" href="404/style.css?v=3">
+  <link rel="stylesheet" href="main/style.css?v=2">
+  <link rel="stylesheet" href="navbar/navbar.css?v=2">
+  <link rel="stylesheet" href="404/style.css?v=2">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <canvas id="canvas"></canvas>
   <div id="navbar"></div>
 
   <div class="background"></div>
@@ -27,7 +28,8 @@
   <div class="container"><a href="https://mielon.eu/home"><div class="go_back"><p>Go</p><p class="home"><strong>Home</strong></p></div></a></div>
   
 
-  <script src="404/script.js?v=3"></script>
-  <script src="navbar/navbar.js?v=3"></script>
+  <script src="404/script.js?v=2"></script>
+  <script src="navbar/navbar.js?v=2"></script>
+  <script src="main/script.js"></script>
 </body>
 </html>
