--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
   <meta name="keywords" content="Roblox GUI, Roblox projects, Mielon, Roblox Dev, RobloxDev">
   <meta name="author" content="Mielon">
   <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="main/style.css?v=3">
-  <link rel="stylesheet" href="navbar/navbar.css?v=3">
-  <link rel="stylesheet" href="home/style.css?v=3">
+  <link rel="stylesheet" href="main/style.css?v=2">
+  <link rel="stylesheet" href="navbar/navbar.css?v=2">
+  <link rel="stylesheet" href="home/style.css?v=2">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -58,8 +58,7 @@
   </section>
 
   <section class="cta">
-    <h2>Get Your Own GUI</h2>
-    <p>Order a fully customized Roblox interface starting from <strong>$5</strong>.</p>
+    <h2>Need anything?</h2>
     <a href="https://mielon.eu/contact" class="cta_button">Contact Me</a>
     <br> <p> </p>
   </section>
@@ -77,8 +76,8 @@
     </div>
   </div>
 
-  <script src="home/script.js?v=3"></script>
-  <script src="navbar/navbar.js?v=3"></script>
-  <script src="main/script.js?=v3"></script>
+  <script src="home/script.js?v=2"></script>
+  <script src="navbar/navbar.js?v=2"></script>
+  <script src="main/script.js"></script>
 </body>
 </html>
